--- a/lab2_priv_separation/zook.conf
+++ b/lab2_priv_separation/zook.conf
@@ -1,8 +1,6 @@
 [zook]
     port       = 8080
-    # To run multiple services, list them separated by commas, like:
-    #  http_svcs = first_svc, second_svc
-    http_svcs  = zookfs_svc
+    http_svcs  = static_svc, dynamic_svc
     extra_svcs = echo_svc, auth_svc, bank_svc
 
 [zookd]
@@ -11,16 +9,21 @@
     gid = 61011
     dir = /jail
 
-[zookfs_svc]
+[static_svc]
     cmd = zookfs
-    url = .*
+    url = .*(\.(html|css|js|jpg|ico)).*
+    uid = 61009
+    gid = 61009
+    dir = /jail
+    args = 61008 61008
+
+[dynamic_svc]
+    cmd = zookfs
+    url = .*(\.cgi).*
     uid = 61012
     gid = 61012
     dir = /jail
-    # You can control what executables zookfs will run as CGI scripts
-    # by specifying the UID/GID of allowed CGI executables, as follows;
-    # uncomment and replace 123 and 456 with your intended UID and GID:
-    #args = 123 456
+    args = 61007 61007
 
 [echo_svc]
     cmd = /zoobar/echo-server.py
