feat: complete ex10

--- a/lab2_priv_separation/zook.conf
+++ b/lab2_priv_separation/zook.conf
@@ -1,7 +1,7 @@
 [zook]
     port       = 8080
     http_svcs  = static_svc, dynamic_svc
-    extra_svcs = echo_svc, auth_svc, bank_svc
+    extra_svcs = echo_svc, auth_svc, bank_svc, profile_svc
 
 [zookd]
     cmd = zookd
@@ -48,3 +48,10 @@
     dir = /jail
     uid = 61014
     gid = 61014
+
+[profile_svc]
+    cmd = /zoobar/profile-server.py
+    args = /profilesvc/sock
+    uid = 0
+    gid = 0
+    dir = /jail
