feat: ex7, need to fix the serialisation part

--- a/lab2_priv_separation/zook.conf
+++ b/lab2_priv_separation/zook.conf
@@ -3,7 +3,7 @@
     # To run multiple services, list them separated by commas, like:
     #  http_svcs = first_svc, second_svc
     http_svcs  = zookfs_svc
-    extra_svcs = echo_svc, auth_svc
+    extra_svcs = echo_svc, auth_svc, bank_svc
 
 [zookd]
     cmd = zookd
@@ -37,3 +37,11 @@
     dir = /jail
     uid = 61013
     gid = 61013
+
+
+[bank_svc]
+    cmd = /zoobar/bank-server.py
+    args = /banksvc/sock
+    dir = /jail
+    uid = 61014
+    gid = 61014
