--- a/lab2_priv_separation/zook.conf
+++ b/lab2_priv_separation/zook.conf
@@ -1,6 +1,6 @@
 [zook]
     port       = 8080
-    http_svcs  = static_svc, dynamic_svc
+    http_svcs  = dynamic_svc, static_svc
     extra_svcs = echo_svc, auth_svc, bank_svc, profile_svc
 
 [zookd]
